gen/Parser.java
// Generated from C:/Files/Java/r_compiler/src/Parser.g4 by ANTLR 4.13.1

package antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COLON=1, COMMA=2, DOT=3, ELLIPSIS=4, SEMICOLON=5, OPEN_BRACKET=6, CLOSE_BRACKET=7, 
		OPEN_SQUARE_BRACKET=8, CLOSE_SQUARE_BRACKET=9, OPEN_CURLY_BRACES=10, CLOSE_CURLY_BRACES=11, 
		OPEN_TEMPLATE_LITERAL=12, AS=13, ASYNC=14, CONTINUE=15, CONST=16, DEFAULT=17, 
		DO=18, EXPORT=19, FOR=20, FROM=21, FUNCTION=22, GET=23, IF=24, IMPORT=25, 
		IN=26, LET=27, NEW=28, OF=29, RETURN=30, SET=31, THIS=32, VAR=33, WHILE=34, 
		YIELD=35, BOOL=36, INT=37, FLOAT=38, STRING=39, NULL=40, UNDEFINED=41, 
		OPTIONAL_CHAINING_OP=42, INCREMENT_OP=43, DECREMENT_OP=44, LOGIC_NOT_OP=45, 
		POW_OP=46, MULT_OP=47, DIV_OP=48, REM_OP=49, ADD_OP=50, SUP_OP=51, COMPARE_OP=52, 
		EQUAL_COMPARE_OP=53, AND=54, OR=55, NULL_COALES_OP=56, TERNARY_OP1=57, 
		TERNARY_OP2=58, ASSIGNMENT_OP=59, ADD_ASSIGN_OP=60, SUB_ASSIGN_OP=61, 
		MULT_ASSIGN_OP=62, POW_ASSIGN_OP=63, DIV_ASSIGN_OP=64, REM_ASSIGN_OP=65, 
		AND_ASSIGN_OP=66, OR_ASSIGN_OP=67, NULL_ASSIGN_OP=68, ARROW=69, ID=70, 
		MULTILINE_COMMENT=71, LINE_COMMENT=72, NEWLINE=73, WS=74, CLOSE_TEMPLATE_LITERAL=75, 
		TEMPLATE_LITERAL_ALLOWED_CHAR=76, TEMPLATE_LITERAL_START_VAR=77, TEMPLATE_LITERAL_VAR_CLOSE=78;
	public static final int
		RULE_program = 0, RULE_line = 1, RULE_specialLine = 2, RULE_return = 3, 
		RULE_function = 4, RULE_arrowFunction = 5, RULE_normalFunction = 6, RULE_anonymousFunction = 7, 
		RULE_args = 8, RULE_arg = 9, RULE_rest = 10, RULE_statement = 11, RULE_importStatement = 12, 
		RULE_from = 13, RULE_importForm = 14, RULE_defaultImport = 15, RULE_namedImport = 16, 
		RULE_aliasImporting = 17, RULE_fullImport = 18, RULE_export = 19, RULE_exportDeclaration = 20, 
		RULE_exportList = 21, RULE_aliasExporting = 22, RULE_exportDefault = 23, 
		RULE_exportModule = 24, RULE_declare = 25, RULE_assignmentRightHand = 26, 
		RULE_declarable = 27, RULE_expression = 28, RULE_functionCall = 29, RULE_callables = 30, 
		RULE_incrementsOp = 31, RULE_unarysOp = 32, RULE_memberGetter = 33, RULE_member = 34, 
		RULE_dotNotation = 35, RULE_bracketNotation = 36, RULE_indexers = 37, 
		RULE_objectable = 38, RULE_objectableWithBrackets = 39, RULE_assignment = 40, 
		RULE_assignable = 41, RULE_multiplicativeOp = 42, RULE_additiveOp = 43, 
		RULE_assinmentOp = 44, RULE_if = 45, RULE_while = 46, RULE_doWhile = 47, 
		RULE_for = 48, RULE_forExpression1 = 49, RULE_expressionList = 50, RULE_forin = 51, 
		RULE_forof = 52, RULE_scopeHead = 53, RULE_scopeBody = 54, RULE_block = 55, 
		RULE_object = 56, RULE_objPropDefine = 57, RULE_objPropName = 58, RULE_method = 59, 
		RULE_array = 60, RULE_arrayInput = 61, RULE_arraySpread = 62, RULE_objectDestructuring = 63, 
		RULE_destructuredObjVar = 64, RULE_arrayDestructuring = 65, RULE_destructuredArrVar = 66, 
		RULE_param = 67, RULE_paramInput = 68, RULE_returnable = 69, RULE_primeType = 70, 
		RULE_num = 71, RULE_strings = 72, RULE_templateLiteral = 73, RULE_templateLiteralContent = 74, 
		RULE_ids = 75, RULE_setableKeywords = 76, RULE_validName = 77, RULE_declarers = 78, 
		RULE_noUseStatement = 79;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "line", "specialLine", "return", "function", "arrowFunction", 
			"normalFunction", "anonymousFunction", "args", "arg", "rest", "statement", 
			"importStatement", "from", "importForm", "defaultImport", "namedImport", 
			"aliasImporting", "fullImport", "export", "exportDeclaration", "exportList", 
			"aliasExporting", "exportDefault", "exportModule", "declare", "assignmentRightHand", 
			"declarable", "expression", "functionCall", "callables", "incrementsOp", 
			"unarysOp", "memberGetter", "member", "dotNotation", "bracketNotation", 
			"indexers", "objectable", "objectableWithBrackets", "assignment", "assignable", 
			"multiplicativeOp", "additiveOp", "assinmentOp", "if", "while", "doWhile", 
			"for", "forExpression1", "expressionList", "forin", "forof", "scopeHead", 
			"scopeBody", "block", "object", "objPropDefine", "objPropName", "method", 
			"array", "arrayInput", "arraySpread", "objectDestructuring", "destructuredObjVar", 
			"arrayDestructuring", "destructuredArrVar", "param", "paramInput", "returnable", 
			"primeType", "num", "strings", "templateLiteral", "templateLiteralContent", 
			"ids", "setableKeywords", "validName", "declarers", "noUseStatement"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", "','", "'.'", "'...'", "';'", "'('", "')'", "'['", "']'", 
			"'{'", "'}'", null, "'as'", "'async'", "'continue'", "'const'", "'default'", 
			"'do'", "'export'", "'for'", "'from'", "'function'", "'get'", "'if'", 
			"'import'", "'in'", "'let'", "'new'", "'of'", "'return'", "'set'", "'this'", 
			"'var'", "'while'", "'yield'", null, null, null, null, "'null'", "'undefined'", 
			null, null, null, "'!'", "'**'", "'*'", "'/'", "'%'", "'+'", "'-'", null, 
			null, "'&&'", "'||'", "'??'", "'?'", null, "'='", null, null, null, null, 
			null, null, null, null, null, "'=>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COLON", "COMMA", "DOT", "ELLIPSIS", "SEMICOLON", "OPEN_BRACKET", 
			"CLOSE_BRACKET", "OPEN_SQUARE_BRACKET", "CLOSE_SQUARE_BRACKET", "OPEN_CURLY_BRACES", 
			"CLOSE_CURLY_BRACES", "OPEN_TEMPLATE_LITERAL", "AS", "ASYNC", "CONTINUE", 
			"CONST", "DEFAULT", "DO", "EXPORT", "FOR", "FROM", "FUNCTION", "GET", 
			"IF", "IMPORT", "IN", "LET", "NEW", "OF", "RETURN", "SET", "THIS", "VAR", 
			"WHILE", "YIELD", "BOOL", "INT", "FLOAT", "STRING", "NULL", "UNDEFINED", 
			"OPTIONAL_CHAINING_OP", "INCREMENT_OP", "DECREMENT_OP", "LOGIC_NOT_OP", 
			"POW_OP", "MULT_OP", "DIV_OP", "REM_OP", "ADD_OP", "SUP_OP", "COMPARE_OP", 
			"EQUAL_COMPARE_OP", "AND", "OR", "NULL_COALES_OP", "TERNARY_OP1", "TERNARY_OP2", 
			"ASSIGNMENT_OP", "ADD_ASSIGN_OP", "SUB_ASSIGN_OP", "MULT_ASSIGN_OP", 
			"POW_ASSIGN_OP", "DIV_ASSIGN_OP", "REM_ASSIGN_OP", "AND_ASSIGN_OP", "OR_ASSIGN_OP", 
			"NULL_ASSIGN_OP", "ARROW", "ID", "MULTILINE_COMMENT", "LINE_COMMENT", 
			"NEWLINE", "WS", "CLOSE_TEMPLATE_LITERAL", "TEMPLATE_LITERAL_ALLOWED_CHAR", 
			"TEMPLATE_LITERAL_START_VAR", "TEMPLATE_LITERAL_VAR_CLOSE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Parser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(Parser.EOF, 0); }
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserVisitor ) return ((ParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 3443670350951776L) != 0) || _la==ID) {
				{
				{
				setState(160);
				line();
				}
				}
				setState(165);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(166);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LineContext extends ParserRuleContext {
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public IfContext if_() {
			return getRuleContext(IfContext.class,0);
		}
		public WhileContext while_() {
			return getRuleContext(WhileContext.class,0);
		}
		public ForContext for_() {
			return getRuleContext(ForContext.class,0);
		}
		public ForinContext forin() {
			return getRuleContext(ForinContext.class,0);
		}
		public ForofContext forof() {
			return getRuleContext(ForofContext.class,0);
		}
		public DoWhileContext doWhile() {
			return getRuleContext(DoWhileContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public SpecialLineContext specialLine() {
			return getRuleContext(SpecialLineContext.class,0);
		}
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).enterLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).exitLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserVisitor ) return ((ParserVisitor<? extends T>)visitor).visitLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_line);
		try {
			setState(178);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(168);
				function();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(169);
				statement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(170);
				if_();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(171);
				while_();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(172);
				for_();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(173);
				forin();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(174);
				forof();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(175);
				doWhile();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(176);
				block();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(177);
				specialLine();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SpecialLineContext extends ParserRuleContext {
		public TerminalNode CONTINUE() { return getToken(Parser.CONTINUE, 0); }
		public ReturnContext return_() {
			return getRuleContext(ReturnContext.class,0);
		}
		public SpecialLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_specialLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).enterSpecialLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).exitSpecialLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserVisitor ) return ((ParserVisitor<? extends T>)visitor).visitSpecialLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SpecialLineContext specialLine() throws RecognitionException {
		SpecialLineContext _localctx = new SpecialLineContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_specialLine);
		try {
			setState(182);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CONTINUE:
				enterOuterAlt(_localctx, 1);
				{
				setState(180);
				match(CONTINUE);
				}
				break;
			case RETURN:
				enterOuterAlt(_localctx, 2);
				{
				setState(181);
				return_();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReturnContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(Parser.RETURN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ReturnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_return; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).enterReturn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).exitReturn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserVisitor ) return ((ParserVisitor<? extends T>)visitor).visitReturn(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReturnContext return_() throws RecognitionException {
		ReturnContext _localctx = new ReturnContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_return);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(184);
			match(RETURN);
			setState(186);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(185);
				expression(0);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionContext extends ParserRuleContext {
		public ArrowFunctionContext arrowFunction() {
			return getRuleContext(ArrowFunctionContext.class,0);
		}
		public NormalFunctionContext normalFunction() {
			return getRuleContext(NormalFunctionContext.class,0);
		}
		public AnonymousFunctionContext anonymousFunction() {
			return getRuleContext(AnonymousFunctionContext.class,0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserVisitor ) return ((ParserVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_function);
		try {
			setState(191);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(188);
				arrowFunction();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(189);
				normalFunction();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(190);
				anonymousFunction();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArrowFunctionContext extends ParserRuleContext {
		public TerminalNode ARROW() { return getToken(Parser.ARROW, 0); }
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public ValidNameContext validName() {
			return getRuleContext(ValidNameContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ArrowFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrowFunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).enterArrowFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).exitArrowFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserVisitor ) return ((ParserVisitor<? extends T>)visitor).visitArrowFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrowFunctionContext arrowFunction() throws RecognitionException {
		ArrowFunctionContext _localctx = new ArrowFunctionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_arrowFunction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(195);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OPEN_BRACKET:
				{
				setState(193);
				args();
				}
				break;
			case AS:
			case ASYNC:
			case FROM:
			case GET:
			case OF:
			case SET:
			case YIELD:
			case ID:
				{
				setState(194);
				validName();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(197);
			match(ARROW);
			setState(200);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(198);
				block();
				}
				break;
			case 2:
				{
				setState(199);
				expression(0);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NormalFunctionContext extends ParserRuleContext {
		public TerminalNode FUNCTION() { return getToken(Parser.FUNCTION, 0); }
		public ValidNameContext validName() {
			return getRuleContext(ValidNameContext.class,0);
		}
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public NormalFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_normalFunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).enterNormalFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).exitNormalFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ParserVisitor ) return ((ParserVisitor<? extends T>)visitor).visitNormalFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NormalFunctionContext normalFunction() throws RecognitionException {
		NormalFunctionContext _localctx = new NormalFunctionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_normalFunction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(202);
			match(FUNCTION);
			setState(203);
			validName();
			setState(204);
			args();
			setState(205);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
